--- a/login-register/style.css
+++ b/login-register/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Arizonia&family=Goldman:wght@400;700&family=Noto+Sans+JP:wght@100..900&display=swap');
+
 *{
     border: 0;
     padding: 0;
@@ -7,7 +8,7 @@
 }
 :root {
     --main-color: #2C3E50; 
-    --company-background: gold;
+    --company-background: lightblue;
     --background-color: white;
 }
 
@@ -121,7 +122,7 @@ body{
 }
 
 .toggle{
-    background-color: gold;
+    background-color: lightblue;
     height: 100%;
     position: relative;
     left: -100%;
@@ -321,6 +322,7 @@ a,.text{
 .remember{
     gap: 3px;
 }
+
 .or{
     font-family: "Noto Sans JP", sans-serif;
     display: flex;
@@ -353,7 +355,7 @@ form .signup-login-btn-container{
 
 .signup-login-btn-container button:hover{
     background-color: var(--company-background);
-    border: 1px solid gold;
+    border: 1px solid rgb(66, 63, 241);
 }
 .sign-up button:not(.signup-login-btn-container button){
     margin-top: 45px;
