--- a/admin-interface/css/dashboard/dashboard.css
+++ b/admin-interface/css/dashboard/dashboard.css
@@ -48,13 +48,13 @@
     grid-row-start: 4;
     grid-row-end: 5;
     grid-column-start: 1;
-    grid-column-end: 5;    
+    grid-column-end: 4;    
 }
 
 .supplier-details{
     grid-row-start: 4;
     grid-row-end: 5;
-    grid-column-start: 5;
+    grid-column-start: 4;
     grid-column-end: 8;    
 }
 
@@ -198,10 +198,10 @@
 
 /* #endregion*/
 
-/* #region Inventory Levels */
+/* #region Recent Orders */
 .recent-orders .container {
     width: 100%;
-    height: 23vh;
+    height: 22vh;
     margin-top: 5px;
     margin-left: -5px;
     margin-bottom: -5px;
@@ -214,7 +214,7 @@
 
 /* #endregion*/
 
-/* #region Inventory Levels */
+/* #region Turnover Levels */
 .inventory-turnover .container {
     width: 100%;
     height: 28vh;
@@ -224,6 +224,22 @@
 }
 
 #inventoryTurnoverChart {
+    width: 100%; 
+    height: 100%; 
+}
+
+/* #endregion*/
+
+/* #region Inventory Levels */
+.supplier-details .container {
+    width: 100%;
+    height: 23vh;
+    margin-top: 5px;
+    margin-left: -5px;
+    margin-bottom: -5px;
+}
+
+#supplierDetailsChart {
     width: 100%; 
     height: 100%; 
 }
