--- a/admin-interface/css/dashboard/dashboard.css
+++ b/admin-interface/css/dashboard/dashboard.css
@@ -246,29 +246,40 @@
 /* #region Inventory Levels */
 .inventory-levels .container {
     width: 100%;
-    margin-top: 10px;
+    height: 55vh;
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-top: 6px;
 }
 
-#inventoryLevelsChart {
-    width: 100%; 
-    height: 100%; 
+#inventoryLevelsChartNew {
+    width: 100%;
+    height: 100%;
 }
 
-#stock-level-labels {
+#inventoryFilterButtons {
     display: flex;
     justify-content: space-around;
-    margin-bottom: 10px;
-    font-family: 'Afacad Flux', sans-serif;
-    font-size: .8rem;
+    margin-bottom: 5px;
 }
 
-.stock-level-box {
-    padding: 2px 7px;
-    border-radius: 5px;
+.inventory-filter-btn {
+    padding: 3px 9px;
+    border: none;
+    border-radius: 8px;
     color: white;
-    font-weight: bold;
-    position: relative;
+    font-weight: 600;
+    font-size: .7rem;
+    cursor: pointer;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
 }
+
+.inventory-filter-btn:hover {
+    transform: translateY(-1px);
+    box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
+}
+
 
 /* #endregion*/
 
