--- a/admin-interface/css/navbar-sidebar/navbar-sidebar.css
+++ b/admin-interface/css/navbar-sidebar/navbar-sidebar.css
@@ -42,7 +42,7 @@ body {
     align-items: center;
     justify-content: space-between;
     transition: 300ms ease-in-out;
-    padding: 5px 10px 5px 70px;
+    padding: 5px 18px 5px 74px;
     z-index: 9;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
@@ -75,52 +75,6 @@ body {
 } 
 /* #endregion */
 
-/* #region Navbar Icon Styling */
-#navbar .icon-container {
-    display: flex;
-    align-items: center;
-    position: relative;
-}
-
-#navbar .icon-container ul {
-    list-style: none;
-    display: flex;
-    margin: 0;
-    padding: 0;
-}
-
-#navbar .icon-container li {
-    margin-left: 7px;
-}
-
-#navbar .icon-button {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 43px;
-    height: 43px;
-    border-radius: 8px;
-    transition: background-color 0.3s ease;
-    cursor: pointer;
-}
-
-#navbar .icon-button:hover, .icon-button.active {
-    background-color: var(--hover-clr);
-}
-
-#navbar .icon-button:hover svg, .icon-button.active svg {
-    fill: var(--accent-clr);
-}
-
-#navbar .icon-button > svg {
-    width: 28px;
-    height: 28px;
-    fill: var(--text-clr);
-    transition: fill .3s ease;
-}
-
-/* #endregion */
-
 /* #region Profile styling */
 .profile-container{
     display: flex;
@@ -130,7 +84,7 @@ body {
     align-items: center;
     border-radius: 17px;
     position: relative;
-    margin-left: 3px;
+    margin-left: 10px;
 }
 
 .profile-container:hover{
@@ -171,19 +125,21 @@ body {
 }
 
 .chevron-container{
-    height: 100%;
-    width: 28px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
+    height: 16px;
+    width: 16px;
+    position: absolute;
+    bottom: 1px;
+    right: 2px;
+   
 }
 
 #chevron{
     fill: rgb(243, 243, 243);
-    width: 28px;
-    height: 28px;
+    width: 16px;
+    height: 16px;
     transition: transform 0.3s ease;
+    background-color: var(--main-color);
+    border-radius: 80%;
 }
 
 .rotate {
@@ -200,9 +156,9 @@ body {
     display: flex;
     flex-direction: column;
     position: fixed;
-    min-width: 290px;
+    min-width: 310px;
     top: 10px;
-    right: 40px;
+    right: 78px;
     background-color: var(--main-color);
     color: #fff;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
@@ -461,101 +417,380 @@ body {
 
 /* #endregion */
 
-/* #region User Activities navbar */
+/* #region Alerts & Notification Popover */
+.alerts-pop-over,
+.notifications-pop-over,
+.user-activities-nav,
+.action-tools-pop-over {
+    font-family: 'Afacad Flux', sans-serif;
+    background-color: #f0f0f0;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    width: 380px;
+    height: 400px;
+    top: 55px;
+    right: 15px;
+    /* background-color: #172029; */
+    box-shadow: 0 12px 20px rgba(0, 0, 0, 0.349);
+    border-radius: 8px;
+    z-index: 9;
+    opacity: 0;
+    visibility: hidden;
+    transform: scale(0.8); 
+    transition: opacity 0.1s ease, visibility 0.1s ease, transform 0.1s ease;
+}
+
+.notifications-pop-over::after,
+.alerts-pop-over::after,
+.user-activities-nav::after,
+.action-tools-pop-over::after {
+    content: '';
+    position: absolute;
+    top: -9px; 
+    right: 351px;
+    width: 0;
+    height: 0;
+    border-left: 9px solid transparent;
+    border-right: 9px solid transparent; 
+    border-bottom: 9px solid #f0f0f0; 
+    z-index: -1;
+}
+
+.alerts-pop-over::after{
+    right: 127px;
+}
+
+.user-activities-nav::after{
+    right: 209px;
+}
+
+.action-tools-pop-over::after{
+    right: 68px;
+}
+
+
+.alerts-pop-over.show,
+.notifications-pop-over.show,
+.user-activities-nav.show,
+.action-tools-pop-over.show {
+    opacity: 1;
+    visibility: visible;
+    transform: scale(1);
+}
+
+.alerts-pop-over.hide,
+.notifications-pop-over.hide,
+.user-activities-nav.hide,
+.action-tools-pop-over.hide {
+    opacity: 0;
+    visibility: hidden;
+    transform: scale(0.9);
+}
+
+/* #endregion */
+
+/* #region Notification and Logs popover content styling */
+.layer .header{
+    font-size: 1.1rem;
+    letter-spacing: .5px;
+    margin: 15px 15px 10px 15px;
+    font-weight: 500;
+}
+
+.layer .row2 .filters{
+    display: flex;
+    flex-direction: row;
+    padding: 5px 15px 0px 15px;
+    border-top: 1px solid #55555541;
+    border-bottom: 1px solid #55555541;
+    color: rgba(105, 105, 105, 0.493);
+    font-size: .95rem;
+}
+
+.filters .f{
+    margin-right: 10px;
+    padding-bottom: 5px;
+    padding-right: 5px;
+    padding-left: 5px;
+    cursor: pointer;
+}
+
+.filters .active{
+    color: black;
+    border-bottom: 2px solid black;
+}
+
+.layer .contents{
+    height: 100%;
+}
+
+.layer .contents .empty{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    height: 100%;
+    margin-top: 30px;
+}
+
+.layer .contents .empty .icon svg{
+    fill: rgba(73, 73, 73, 0.541);
+    height: 140px;
+    width: 140px;
+}
+
+.layer .contents .empty .message{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 0 20px 0 20px;
+}
+
+.layer .contents .empty .message .top{
+    font-weight: 600;
+    font-size: 1.2rem;
+    margin-bottom: 7px;
+    margin-top: 10px;
+}
+
+.layer .contents .empty .message .bot{
+    font-size: .9rem;
+    line-height: .9rem;
+}
+
+
+
+.layer .previous-notifs{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 5px;
+    background-color: rgb(223, 223, 223);
+    cursor: pointer;
+    display: none;
+}
+
+
+/* #endregion */
+
+/* #region Action Tools popover */
+.action-tools-pop-over{
+    width: 690px;
+    height: 335px;
+}
+.action-tools-pop-over .orientation{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 0 25px;
+}
+.action-tools-pop-over li {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    height: 75px;
+    width: 310px;
+    padding: 15px 0 10px 15px;
+    border-radius: 15px;
+    background-color: rgba(24, 81, 155, 0.116);
+}
+
+.action-tools-pop-over li:hover { 
+    transform: scale(1.02); 
+    cursor: pointer; 
+}
+
+.action-tools-pop-over li:not(:first-child) {
+    margin: 20px 0;
+}
+.action-tools-pop-over li:first-child {
+    margin-top: 0;
+}
+.action-tools-pop-over .icon{
+    background-color: rgba(14, 43, 90, 0.877);
+    border-radius: 10px;
+    margin-right: 15px;
+    padding: 10px;
+}
+.action-tools-pop-over .icon{
+    display: flex;
+    justify-content: center;
+}
+.action-tools-pop-over .icon svg{
+    fill: white;
+    height: 20px;
+    width: 20px;
+}
+.action-tools-pop-over ul li .text .title{
+    font-size: 1.05rem;
+    line-height: 1.05rem;
+    font-weight: 500;
+    letter-spacing: .4px;
+    margin-bottom: 3px;
+}
+
+.action-tools-pop-over ul li .text .info{
+    font-size: .90rem;
+    line-height: .90rem;
+    letter-spacing: .4px;
+}
+
+/* #endregion */
+
+/* #region Navbar Icons */
 .left-container {
     height: 35px;
     display: flex;
     align-items: center;
 }
 
-/* #region User Activies navbar */
-.icon-container .left-container .user-activities-container {
-    position: relative;
+#navbar .icon-container {
     display: flex;
-    height: 100%;
-    justify-content: center;
     align-items: center;
-    clip-path: polygon(11% 50%, 0% 0%, 85% 0%, 95% 50%, 85% 100%, 0% 100%);
-    margin-right: -7px;
+    position: relative;
 }
 
-
-.icon-container .left-container .user-activities-container .arrow-shape {
-    width: 120px; 
-    height: 100%;
-    background: linear-gradient(
-        90deg, 
-        #4cb900, /* A bit dark */
-        #5be400, /* The main color */
-        #4cb900 /* A bit dark */
-    );
-    clip-path: polygon(11% 50%, 0% 0%, 85% 0%, 95% 50%, 85% 100%, 0% 100%);
-    cursor: pointer;
-}
-
-.icon-container .left-container .user-activities-container .arrow-shape:hover{
-    background: linear-gradient(
-        90deg, 
-        #4cb900, /* A bit dark */
-        #4cb900, /* Slightly dark */
-        #4cb900 /* A bit dark */
-    );
-}
-
-
-.icon-container .left-container .user-activities-container span {
-    position: absolute;
-    font-family: 'Afacad Flux', sans-serif;
-    color: var(--main-color);
-    pointer-events: none; 
-    font-weight: 700;
-    font-size: 1.05rem;
-}
-
-.uac1{
-    top: 0;
-    left: 25px;
-}
-.uac2{
-    bottom: 0;
-    right: 35px;
-}
-/* #endregion */
-
-/* #endregion */
-
-/* #region Navbar Icons */
 .ic-container{
     display: flex;
     align-items: center;
-    justify-content: center;
-    width: 43px;
-    height: 43px;
+    justify-content: flex-start;
     border-radius: 8px;
     transition: background-color 0.3s ease;
-    margin-right: 3px;
+    margin-right: 4px;
     cursor: pointer;
+    position: relative;
 }
+
+.ic-container span{
+    font-family: 'Afacad Flux', sans-serif;
+    color: var(--text-clr);
+    font-size: .95rem;
+    transition: color 0.3s ease;
+}
+
+.ic1{
+    width: 135px;
+    height: 39px;
+    padding-left: 10px;
+}
+
+.ic1 span{
+    margin-left: 6px;
+}
+
+.ic2{
+    width: 95px;
+    height: 39px;
+    padding-left: 13px;
+}
+
+.ic2 span{
+    margin-left: 9px;
+}
+
+.ic3{
+    width: 143px;
+    height: 39px;
+    padding-left: 13px;
+}
+
+.ic3 span{
+    margin-left: 8px;
+}
+
 .ic-container svg {
-    width: 26px;
-    height: 26px;
+    width: 25px;
+    height: 25px;
     fill: var(--text-clr);
     transition: fill .3s ease;
 }
 
+.ic3 svg{
+    width: 26px;
+    height: 26px;
+}
+
+.ic4{
+    width: 40px;
+    height: 39px;
+    justify-content: center;
+}
+
+.ic4 svg{
+    width: 25px;
+    height: 25px;
+    margin-left: 1px;
+}
 
 .ic-container:hover svg{
     fill: var(--accent-clr); 
+}
+
+.ic-container:hover span{
+    color: var(--accent-clr);
+}
+
+.ic-container.active svg {
+    fill: var(--accent-clr);
 }
 
 .ic-container:hover {
     background-color: var(--hover-clr);
 }
 
+.ic-container .icon{
+    display: none;
+}
+
+/* #region Badge */
+.ic-container .badge{
+    color: white;
+    position: absolute;
+    background-color: rgb(253, 40, 40);
+    height: 8px;
+    width: 8px;
+    border-radius: 80%;
+    display: none;
+    border: 2px solid var(--text-clr);
+    transition: border .3s ease;
+}
+
+.ic1 .badge{
+    top: 8px;
+    left: 26px;
+}
+
+.ic2 .badge{
+    top: 8px;
+    left: 35px;
+}
+
+.ic3 .badge{
+    top: 6px;
+    left: 34px;
+}
+
+.ic-container .show{
+    display: block;
+}
+
+.ic-container:hover .badge{
+    border: 2px solid var(--accent-clr);
+}
+
+.ic-container.active .badge{
+    border: 2px solid var(--accent-clr);
+}
+
+/* #endregion */
+
 /* #endregion */
 
 /* #region Tooltip */
-.tooltip {
+/*.tooltip {
     position: absolute;
     background-color: #1e4450dc;
     color: rgb(243, 243, 243);
@@ -570,7 +805,27 @@ body {
     transform: translate(14px, -50%); 
     transition: opacity 0.2s ease-in-out;
     z-index: 1000;
-}
+}*/
+
+/*
+.tooltip {
+    position: absolute;
+    background-color: #1e4450dc;
+    color: rgb(243, 243, 243);
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-family: 'Afacad Flux', sans-serif;
+    font-size: .85rem;
+    letter-spacing: .8px;
+    font-weight: 600;
+    pointer-events: none;
+    opacity: 0;
+    transform: translate(-45px, 30px); 
+    transition: opacity 0.2s ease-in-out;
+    z-index: 1000;
+    text-wrap: nowrap;
+}*/
+
 /* #endregion */
 
 /* #region Logo Styling */
@@ -715,7 +970,7 @@ body {
     left: 0;
     top: 0;
     bottom: 0;
-    z-index: 10;
+    z-index: 11;
     transition: width .27s ease-in-out;
 }
 
@@ -812,7 +1067,7 @@ body {
     width: 100vw;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.5);
-    z-index: 5;
+    z-index: 10;
     opacity: 0;
     visibility: hidden;
     transition: opacity 0.3s ease, visibility 0.3s ease;
