action tool ver .1
just changed font size of .info

--- a/admin-interface/css/navbar-sidebar/navbar-sidebar.css
+++ b/admin-interface/css/navbar-sidebar/navbar-sidebar.css
@@ -633,9 +633,10 @@ body {
 }
 
 .action-tools-pop-over ul li .text .info{
-    font-size: .90rem;
-    line-height: .90rem;
+    font-size: .86rem;
+    line-height: .75rem;
     letter-spacing: .4px;
+    color: rgb(19, 19, 19);
 }
 
 /* #endregion */
