--- a/admin-interface/css/inventory/inventory.css
+++ b/admin-interface/css/inventory/inventory.css
@@ -2,7 +2,7 @@
 /* #region Inventory grid designs */
 .inventory-grid {
     display: grid;
-    grid-template-columns: repeat(14, 1fr); 
+    grid-template-columns: repeat(15, 1fr); 
     gap: 20px;
     margin: 20px 20px 20px 100px;
     height: auto;
@@ -35,7 +35,7 @@
     grid-row-start: 2;
     grid-row-end: 4;
     grid-column-start: 9;
-    grid-column-end: 15;
+    grid-column-end: 16;
 }
 
 .i4{
@@ -48,22 +48,22 @@
 .i5{
     grid-row-start: 1;
     grid-row-end: 2;
-    grid-column-start: 9;
-    grid-column-end: 11;
+    grid-column-start: 10;
+    grid-column-end: 12;
 }
 
 .i6{
     grid-row-start: 1;
     grid-row-end: 2;
-    grid-column-start: 11;
-    grid-column-end: 13;
+    grid-column-start: 12;
+    grid-column-end: 14;
 }
 
 .i7{
     grid-row-start: 1;
     grid-row-end: 2;
-    grid-column-start: 13;
-    grid-column-end: 15;
+    grid-column-start: 14;
+    grid-column-end: 16;
 }
 
 /* #endregion */
@@ -115,7 +115,7 @@
 
 /* #endregion */
 
-/* #region Charts */
+/* #region Chart tabs */
 .chart-tab{
     font-size: 1.1rem;
     text-align: center;
@@ -149,7 +149,7 @@
     justify-content: center;
     align-items: center;
     border-radius: 8px;
-    margin-right: 10px;
+    margin-right: 5px;
 }
 
 .svg-container svg{
@@ -231,7 +231,7 @@
     background-color: #fafafa;
 }
 
-/* Column styling */
+/* #region Column stapces */
 .inventory-activities-item .employee, .inventory-activities-header .inventory-activities-header-employee {
     flex-basis: 20%;
     text-align: left;
@@ -257,7 +257,9 @@
     text-align: center;
 }
 
-/* Responsive scrollbar */
+/* #endregion */
+
+/* #region Responsive scrollbar */
 .inventory-activities-container::-webkit-scrollbar {
     width: 8px;
 }
@@ -275,15 +277,6 @@
 .inventory-activities-container::-webkit-scrollbar-thumb:hover {
     background-color: #555;
 }
-
-/* Responsive layout */
-@media (max-width: 768px) {
-    .inventory-activities-header span, .inventory-activities-item span {
-        font-size: 0.75rem;
-    }
-    .inventory-activities-item, .inventory-activities-header {
-        padding: 8px;
-    }
-}
+/* #endregion */
 
 /* #endregion */
