--- a/admin-interface/css/supply-chain/supply-chain.css
+++ b/admin-interface/css/supply-chain/supply-chain.css
@@ -1,23 +1,307 @@
 
-/* #region Option Gridlayout*/
-.option1{
-    grid-row-start: 1;
-    grid-row-end: 3;
-    grid-column-start: 1;
-    grid-column-end: 9;
+/* #region sales grid designs */
+.supply-chain-grid {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr); 
+    gap: 20px;
+    margin: 20px 20px 20px 100px;
+    height: auto;
+    grid-template-rows: 50px 120px 380px;
 }
 
-.option2{
+/* #region Grid Layout*/
+.title{
     grid-row-start: 1;
+    grid-row-end: 2;
+    grid-column-start: 1;
+    grid-column-end: 6;
+}
+
+.i1{
+    grid-row-start: 2;
     grid-row-end: 3;
-    grid-column-start: 9;
-    grid-column-end: 17;
+    grid-column-start: 1;
+    grid-column-end: 4;
+}
+
+.i2{
+    grid-row-start: 2;
+    grid-row-end: 3;
+    grid-column-start: 4;
+    grid-column-end: 7;
+}
+
+.i3{
+    grid-row-start: 2;
+    grid-row-end: 3;
+    grid-column-start: 7;
+    grid-column-end: 10;
+}
+
+.i4{
+    grid-row-start: 2;
+    grid-row-end: 3;
+    grid-column-start: 10;
+    grid-column-end: 13;
+}
+
+.i5{
+    grid-row-start: 3;
+    grid-row-end: 4;
+    grid-column-start: 1;
+    grid-column-end: 6;
+}
+
+.i6{
+    grid-row-start: 3;
+    grid-row-end: 4;
+    grid-column-start: 6;
+    grid-column-end: 13;
+}
+
+.i7{
+    grid-row-start: 1;
+    grid-row-end: 2;
+    grid-column-start: 11;
+    grid-column-end: 13;
 }
 
 /* #endregion */
 
+/* #endregion */
+
+/* #region supply-chain item styles */
+.supply-chain-item {
+    padding: 10px;
+    background-color: #f0f0f0;
+    font-family: 'Afacad Flux', sans-serif;
+    transition: transform 0.2s, box-shadow 0.2s; 
+    border: 1px solid rgba(90, 90, 90, 0.253);
+    border-radius: 8px;
+}
+
+.supply-chain-item:hover {
+    transform: translateY(-2px); 
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); 
+    cursor: pointer;
+}
+
+.supply-chain-item .item-name{
+    letter-spacing: .8px;
+    font-size: 1.18rem;
+    font-weight: 500;
+    margin-left: 10px;
+    margin-top: 5px;
+}
+
+/* #region Title style*/
+.supply-chain-item.title{
+    background: transparent;
+    box-shadow: none;
+    font-size: 1.85rem;
+    font-weight: 500;
+    letter-spacing: .85px;
+    border: none;
+
+}
+
+.supply-chain-item.title:hover {
+    transform: none; 
+    box-shadow: none; 
+    cursor:default;
+}
+/* #endregion */
 
 
+/* #endregion */
 
+.i1 .container{
+    height: 100px;
+    width: 100%;
+}
 
+/* #region Chart tabs */
+.chart-tab{
+    font-size: 1.1rem;
+    text-align: center;
+    color: #02242e;
+    font-weight: 500;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 0;
+    margin-top: 15px;
+    margin-bottom: -5px;
+    background-color: #45a14377;
+    border: none;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2); 
+}
+
+.chart-tab.i7 {
+    margin-left: 10px;
+}
+
+.svg-container{
+    background-color: #02242e;
+    width: 42px;
+    height: 42px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 8px;
+    margin-right: 12px;
+}
+
+.svg-container svg{
+    height: 23px;
+    width: 23px;
+}
+
+/* #endregion */
+
+/* #region Order Processes Styling */
+.order-processes-container .item-name {
+    font-size: 1.2rem;
+    font-weight: bold;
+    margin-bottom: 10px;
+    display: block;
+}
+
+.order-processes-list-container {
+    overflow-y: auto;
+    padding-right: 10px;
+    padding-left: 10px;
+    font-size: 0.88rem;
+    font-weight: 500;
+    height: 325px;
+}
+
+.order-processes-list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.order-processes-header {
+    background-color: #f1f1f1;
+    border-bottom: 2px solid #ccc;
+    position: sticky;
+    top: 0;
+    z-index: 4;
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+}
+
+.order-processes-item {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    border-bottom: 1px solid #ddd;
+    background-color: #fff;
+    transition: background-color 0.2s, box-shadow 0.2s;
+    margin-bottom: 5px;
+}
+
+.order-processes-item:hover {
+    background-color: #f9f9f9;
+    cursor: pointer;
+}
+
+.order-processes-item:nth-child(even) {
+    background-color: #fafafa;
+}
+
+.order-processes-item .product-id, .order-processes-header .header-product-id {
+    flex-basis: 20%;
+    text-align: left;
+}
+
+.order-processes-item .quantity, .order-processes-header .header-quantity {
+    flex-basis: 20%;
+    text-align: center;
+}
+
+.order-processes-item .type, .order-processes-header .header-type {
+    flex-basis: 20%;
+    text-align: center;
+}
+
+.order-processes-item .status, .order-processes-header .header-status {
+    flex-basis: 20%;
+    text-align: center;
+}
+
+/* #endregion */
+
+/* #region Order Requests Styling */
+.order-requests-container .item-name {
+    font-size: 1.2rem;
+    font-weight: bold;
+    margin-bottom: 10px;
+    display: block;
+}
+
+.order-requests-list-container {
+    overflow-y: auto;
+    padding-right: 10px;
+    padding-left: 10px;
+    font-size: 0.88rem;
+    font-weight: 500;
+    height: 325px;
+}
+
+.order-requests-list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.order-requests-header {
+    background-color: #f1f1f1;
+    border-bottom: 2px solid #ccc;
+    position: sticky;
+    top: 0;
+    z-index: 4;
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+}
+
+.order-requests-item {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    border-bottom: 1px solid #ddd;
+    background-color: #fff;
+    transition: background-color 0.2s, box-shadow 0.2s;
+    margin-bottom: 5px;
+}
+
+.order-requests-item:hover {
+    background-color: #f9f9f9;
+    cursor: pointer;
+}
+
+.order-requests-item:nth-child(even) {
+    background-color: #fafafa;
+}
+
+.order-requests-item .product-id, .order-requests-header .header-product-id {
+    flex-basis: 30%;
+    text-align: left;
+}
+
+.order-requests-item .quantity, .order-requests-header .header-quantity {
+    flex-basis: 30%;
+    text-align: center;
+}
+
+.order-requests-item .type, .order-requests-header .header-type {
+    flex-basis: 30%;
+    text-align: center;
+}
+
+/* #endregion */
 
