--- a/admin-interface/css/dashboard/dashboard.css
+++ b/admin-interface/css/dashboard/dashboard.css
@@ -8,10 +8,14 @@
     display: grid;
     grid-template-columns: repeat(12, 1fr); 
     gap: 20px;
-    margin: 20px 20px 20px 100px;
-    height: auto;
+    margin: 0 1px 0 0;
+    padding: 20px 20px 20px 100px;
+    height: calc(100vh - 60px);
     grid-template-rows: 50px 120px 380px;
+    overflow-y: auto;
 }
+
+
 
 
 /* #region Grid Layout*/
