--- a/admin-interface/css/supply-chain/supply-chain.css
+++ b/admin-interface/css/supply-chain/supply-chain.css
@@ -3,10 +3,11 @@
 .supply-chain-grid {
     display: grid;
     grid-template-columns: repeat(12, 1fr); 
-    gap: 20px;
-    margin: 20px 20px 20px 100px;
-    height: auto;
+    margin: 0;
+    padding: 20px 20px 20px 100px;
+    height: calc(100vh - 60px);
     grid-template-rows: 50px 120px 380px;
+    overflow-y: auto;
 }
 
 /* #region Grid Layout*/
